<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.group10.photoeditor.LookUpActivity">
    
    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/look_up_prompt"
        android:textSize="25sp"
        android:textColor="@color/light_gray"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp"
        />

    <EditText
        android:id="@+id/filename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_purple"
        android:hint="@string/filename"
        android:textColor="@color/light_gray"
        android:textColorHint="@color/light_gray" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Search"
        android:layout_gravity="right"
        android:onClick="search"
        android:background="@color/light_gray"
        android:layout_marginTop="10dp" />
</LinearLayout>
